# ROS_2_TurtleBot_perception_project

./: README.md
enpm673_final_proj/: CMakeLists.txt  package.xml
enpm673_final_proj/install/: local_setup.sh  setup.sh
enpm673_final_proj/install/enpm673_final_proj/lib/enpm673_final_proj/: cpp_enpm673_final_proj  enpm673_final_proj_main.py  findhorizonline.py
enpm673_final_proj/install/enpm673_final_proj/share/ament_index/resource_index/package_run_dependencies/: enpm673_final_proj
enpm673_final_proj/install/enpm673_final_proj/share/ament_index/resource_index/parent_prefix_path/: enpm673_final_proj
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/cmake/: enpm673_final_projConfig-version.cmake  enpm673_final_projConfig.cmake
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/environment/: ament_prefix_path.dsv  path.dsv  pythonpath.dsv  pythonpath.sh
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/launch/: enpm673_world.launch.py
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/models/: sto.pt
enpm673_final_proj/install/enpm673_final_proj/share/enpm673_final_proj/worlds/: animated_box.world  enpm673.world
enpm673_final_proj/log/: latest_build
enpm673_final_proj/scripts/: enpm673_final_proj_main.py  findhorizonline.py
(+10 files in other folders)
