<?xml version="1.0"?>
<package format="3">
  <name>enpm673_final_proj</name>
  <version>0.0.0</version>
  <description>ENPM673 turtlebot final project</description>
  <maintainer email="chang177@umd.edu">chang177</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros plugin_path="${prefix}/../../lib/enpm673_final_proj"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
